--- a/ext_rice/config/rice.yml
+++ b/ext_rice/config/rice.yml
@@ -1,8 +1,3 @@
-cling:
-  - ext_rice/core_ext/c.hpp
-  - ext_rice/core_ext/types.hpp
-  - ext_rice/core_ext/bitset.hpp
-
 makefile:
   cflags: -std=c++23 -fjump-tables -Wno-format-overflow -Wno-format-security
 
@@ -10,7 +5,7 @@ libs:
   - stdc++_libbacktrace
   - tbb
 
-include:
+include: &include
   - chrono
   - fstream
   - filesystem
@@ -30,6 +25,12 @@ include:
   - unordered_set
   - unordered_map
   - valarray
+
+cling:
+  - *include
+  - ext_rice/core_ext/c.hpp
+  - ext_rice/core_ext/types.hpp
+  - ext_rice/core_ext/bitset.hpp
 
 module C:
   DOUBLE_SAFE_INT64:
