--- a/config/settings.yml
+++ b/config/settings.yml
@@ -15,6 +15,8 @@ test:
 development:
 
 virtual:
+  server_master_name: master
+  server_cluster_name: cluster
 
 staging:
   db_host: 127.0.0.1
@@ -49,3 +51,6 @@ production:
   # mail_password: $SECRET encrypted_secret
   owner_public_key:
   # owner_private_key: $SECRET encrypted_secret
+
+cluster:
+  server_cluster: true
