don't enforce sass

--- a/ext_shakapacker/lib/javascript/shakapacker.yml
+++ b/ext_shakapacker/lib/javascript/shakapacker.yml
@@ -30,5 +30,5 @@ packages:
   - 'postcss-flexbugs-fixes'
   - 'postcss-preset-env'
   # SCSS
-  - 'sass'
-  - 'sass-loader'
+  # - 'sass'
+  # - 'sass-loader'
