make js spec_helpers reusable outside web_tools

--- a/.gitignore
+++ b/.gitignore
@@ -85,26 +85,22 @@
 *.js.map
 ext_coffee/lib/javascript/**/*.js
 !ext_coffee/lib/javascript/**/all.js
-ext_coffee/test/fixtures/files/**/*.js
-!ext_coffee/test/fixtures/files/rails_ujs/ajax.js
+!ext_coffee/lib/javascript/jest/**/spec_helper.js
 ext_coffee/vendor/javascript/turbolinks/**/*.js
 !ext_coffee/vendor/javascript/turbolinks/**/all.js
+!ext_coffee/vendor/javascript/turbolinks/**/spec_helper.js
 !ext_coffee/vendor/javascript/turbolinks/**/BANNER.js
 !ext_coffee/vendor/javascript/turbolinks/**/turbolinks.min.js
 !ext_coffee/vendor/javascript/turbolinks/**/turbolinks_backports.js
 ext_coffee/vendor/javascript/rails-ujs/**/*.js
 !ext_coffee/vendor/javascript/rails-ujs/**/all.js
+!ext_coffee/vendor/javascript/rails-ujs/**/spec_helper.js
 !ext_coffee/vendor/javascript/rails-ujs/**/BANNER.js
 !ext_coffee/vendor/javascript/rails-ujs/**/rails-ujs.min.js
 /ext_rails/lib/javascript/concepts/**/*.js
-/ext_rails/lib/javascript/elements/**/*.js
-/ext_rails/lib/javascript/index.js
 /mix_admin/lib/javascript/concepts/**/*.js
-/mix_admin/lib/javascript/elements/**/*.js
 /mix_admin/lib/javascript/index.js
 /mix_page/lib/javascript/concepts/**/*.js
-/mix_page/lib/javascript/elements/**/*.js
-/mix_page/lib/javascript/index.js
 sunzistrano/test/fixtures/files/local_app/
 app/rice/ext.so
 app/rice/ext.sha256
